--- a/my-web/tsconfig.node.json
+++ b/my-web/tsconfig.node.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "esnext",
-    "lib": ["esnext"],
+    "target": "ES2023",
+    "lib": ["ES2023"],
     "module": "ESNext",
     "types": ["node"],
     "skipLibCheck": true,
@@ -20,7 +20,6 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
     "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
